--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             height="150"
           />
           <div class="personal-info__content">
-            <h1 class="personal-info__title">Akhmedov Eldorbek</h1>
+            <h1 class="personal-info__title">Azamov Behruz</h1>
             <img src="./images/Vector 8.svg" alt="" class="vector" />
             <p class="personal-info__description">Fergana, Uzbekistan</p>
           </div>
